--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,87 +1,103 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap');
 
 :root {
-    --white-color: #fff;
-    --black-color: #000;
-    --green-color: #007B0C;
+  --white-color: #fff;
+  --black-color: #000;
+  --green-color: #007B0C;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Open sans", sans-serif;
-    text-decoration: none;
-    color: var(--black-color);
-    outline: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+  color: var(--black-color);
+  outline: 0;
 }
 
 body {
-    width: 100%;
-    height: 100vh;
-    background: var(--white-color);
+  width: 100%;
+  height: 100vh;
+  background: var(--white-color);
 }
 
 .navigation {
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 4rem;
-    box-shadow: 0 0.1rem 0.5rem #ccc;
-    position: fixed;
-    transition: all 0.5s;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 4rem;
+  box-shadow: 0 0.1rem 0.5rem #ccc;
+  position: fixed;
+  transition: all 0.5s;
 }
 
 .navigation img {
-    width: 5rem;
-    height: 5rem;
+  width: 5rem;
+  height: 5rem;
 }
 
 .nav-menu {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    list-style: none;
-    margin-right: 4rem;
-    gap: 4.4rem;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  list-style: none;
+  margin-right: 4rem;
+  gap: 4.4rem;
 }
 
 .nav-menu .nav-item {
-    font-weight: 700;
-    font-size: 16px;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 .content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100vw;
-    height: 100vh;
-    padding: 0px 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100vw;
+  height: 100vh;
+  padding: 0px 5%;
 }
 
 .textBox {
-    width: 45%;
+  width: 45%;
 }
 
 .textBox h2 {
-    font-size: 2.7rem;
-    color: var(--black-color);
-    margin-bottom: 0.8rem;
+  font-size: 2.7rem;
+  font-weight: 600;
+  color: var(--black-color);
+  margin-bottom: 0.8rem;
 }
 
 .textBox span {
-    color: var(--green-color);
-    font-weight: bold;
+  color: var(--green-color);
+  font-weight: 900;
+}
+
+.textBox p {
+    font-size: 1rem;
 }
 
 .content-img {
-    margin-top: 7rem;
+  height: 70%;
+  margin-top: 6rem;
 }
 
 .content-img img {
-    width: 80%;
-    margin-top: 20%;
-    width: 90%;
+  width: 75%;
+}
+
+.textBox a {
+  position: relative;
+  top: 50px;
+  left: 30%;
+  padding: 15px 45px;
+  border-radius: 35px;
+  align-items: center;
+  background: var(--green-color);
+  color: var(--white-color);
+  font-weight: 700;
 }
