--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap");
 
 :root {
   --white-color: #fff;
   --black-color: #000;
-  --green-color: #007B0C;
+  --green-color: #007b0c;
 }
 
 * {
@@ -48,6 +48,7 @@ body {
 }
 
 .nav-menu .nav-item {
+  position: relative;
   font-weight: 700;
   font-size: 16px;
 }
@@ -78,7 +79,7 @@ body {
 }
 
 .textBox p {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .content-img {
@@ -100,4 +101,20 @@ body {
   background: var(--green-color);
   color: var(--white-color);
   font-weight: 700;
+}
+
+.navigation .nav-menu .nav-item a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0.2rem;
+  background: var(--green-color);
+  transition: all 300ms ease-in-out;
+}
+
+.navigation .nav-menu .nav-item a:hover::after {
+  width: 60%;
+  left: 22%;
 }
